# asciinema-scenario

./: .gitignore  CHANGES.md  Cargo.toml  LICENSE-APACHE  README.md  flake.nix  pr_body.txt
.github/: CODEOWNERS  dependabot.yml
.github/actions/common-setup/: action.yml
.github/workflows/: ci.yml  master.yml  update-flake-lock.yml
example/: demo.cast  demo.scenario  index.html
src/: main.rs
