[package]
name = "asciinema-scenario"
version = "0.4.0"
authors = ["Rok Garbas <rok@garbas.si>"]
edition = "2018"
description = "Create asciinema videos from a text file."
license = "MIT OR Apache-2.0"
readme = "README.md"
homepage = "https://github.com/garbas/asciinema-scenario"
repository = "https://github.com/garbas/asciinema-scenario"
keywords = ["asciinema","asciicast"]
include = [
    "**/*.rs",
    "Cargo.toml",
    "README.md",
]

[dependencies]
asciicast = "0.2.2"
failure = "0.1.8"
html-escape = "0.2.13"
log = "0.4.19"
serde = { version = "1.0.166", features = ["derive"] }
serde_json = "1.0.99"
simplelog = "0.12.1"
structopt = "0.3.14"
structopt-derive = "0.4.7"
structopt-flags = { version = "0.3.5", features = ["simplelog"] }
svg = "0.13.1"
